--- a/.env
+++ b/.env
@@ -5,13 +5,15 @@ DB_NAME=whatsapp_api
 PORT=8000
 
 JWT_SECRET=your_jwt_secret_key
-
+DUITKU_ENV=sandbox
 DUITKU_MERCHANT_CODE=D7178
 DUITKU_API_KEY=59f9968219c2796a1165bbc1d4249da2
 DUITKU_API_URL=https://sandbox.duitku.com/webapi/api/merchant
 DUITKU_CALLBACK_URL=http://localhost:3000/api/payments/callback
 DUITKU_RETURN_URL=http://localhost:3000/api/payments/return
 
+DUITKU_BASE_URL=https://sandbox.duitku.com/webapi/api/merchant
+DUITKU_CALLBACK_URL=https://localhost:8000/api/payments/callback
 FRONTEND_URL=http://localhost:3000  # Sesuaikan dengan URL frontend Anda
 FRONTEND_PAYMENT_SUCCESS_URL=/payment/success
 FRONTEND_PAYMENT_FAILED_URL=/payment/failed
