--- a/.env
+++ b/.env
@@ -13,9 +13,12 @@ DUITKU_CALLBACK_URL=http://localhost:3000/api/payments/callback
 DUITKU_RETURN_URL=http://localhost:3000/api/payments/return
 
 DUITKU_BASE_URL=https://sandbox.duitku.com/webapi/api/merchant
-DUITKU_CALLBACK_URL=https://localhost:8000/api/payments/callback
+DUITKU_CALLBACK_URL=https://6db4-2404-c0-5c60-00-6ee-79dd.ngrok-free.app /api/payments/callback
 FRONTEND_URL=http://localhost:3000  # Sesuaikan dengan URL frontend Anda
 FRONTEND_PAYMENT_SUCCESS_URL=/payment/success
 FRONTEND_PAYMENT_FAILED_URL=/payment/failed
 
+
 GOOGLE_CLIENT_ID=your_client_id
+BACKEND_URL=https://6db4-2404-c0-5c60-00-6ee-79dd.ngrok-free.app 
+
